# galaxy_simulator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  callgrind.out.68639  callgrind.out.68723  compile_mpi.sh  compile_mpi_omp.sh  compile_omp.sh  compile_sequential.sh  galaxy_job_mpi.sh  galaxy_job_mpi_omp.sh  galaxy_job_seq.sh  gmon.out  load_env.sh  mpi_log.txt  profile.coz  run_mpi.sh  run_omp.sh  seq_log.txt  test_extract.sh  tree.txt
benchmarks/: bench_mpi.sh  bench_mpi_omp.sh  bench_mpi_omp_128.sh  bench_omp.sh  bench_seq.sh  galaxy_bench_job_mpi.sh  galaxy_bench_job_mpi_omp.sh  galaxy_bench_job_mpi_omp_128.sh  galaxy_bench_job_omp.sh  galaxy_bench_job_seq.sh  galaxy_job_mpi_omp.sh  galaxy_job_seq.sh  gmon.out  mpi_omp_128_results.csv  mpi_omp_results.csv  mpi_results.csv  openmp_results.csv  output.txt  process_benchmarks.py  sequential_results.csv
benchmarks/logs/: output_100000_1.txt  output_100000_2.txt  output_100000_3.txt  output_100000_4.txt  output_100000_5.txt  output_10000_1.txt  output_10000_10.txt  output_10000_2.txt  output_10000_3.txt  output_10000_4.txt  output_10000_5.txt  output_10000_6.txt  output_10000_7.txt  output_10000_8.txt  output_10000_9.txt  output_1000_1.txt  output_1000_10.txt  output_1000_2.txt  output_1000_3.txt  output_1000_4.txt  output_1000_5.txt  output_1000_6.txt  output_1000_7.txt  output_1000_8.txt  output_1000_9.txt
benchmarks/logs/mpi/: output_100000_128_1.txt  output_100000_128_10.txt  output_100000_128_2.txt  output_100000_128_3.txt  output_100000_128_4.txt  output_100000_128_5.txt  output_100000_128_6.txt  output_100000_128_7.txt  output_100000_128_8.txt  output_100000_128_9.txt  output_100000_16_1.txt  output_100000_16_10.txt  output_100000_16_2.txt  output_100000_16_3.txt  output_100000_16_4.txt  output_100000_16_5.txt  output_100000_16_6.txt  output_100000_16_7.txt  output_100000_16_8.txt  output_100000_16_9.txt  output_100000_32_1.txt  output_100000_32_10.txt  output_100000_32_2.txt  output_100000_32_3.txt  output_100000_32_4.txt  output_100000_32_5.txt  output_100000_32_6.txt  output_100000_32_7.txt  output_100000_32_8.txt  output_100000_32_9.txt  output_100000_4_1.txt  output_100000_4_10.txt  output_100000_4_2.txt  output_100000_4_3.txt  output_100000_4_4.txt  output_100000_4_5.txt  output_100000_4_6.txt  output_100000_4_7.txt  output_100000_4_8.txt  output_100000_4_9.txt  (+260 more)
benchmarks/logs/mpi_omp/: output_100000_16_1.txt  output_100000_16_10.txt  output_100000_16_2.txt  output_100000_16_3.txt  output_100000_16_4.txt  output_100000_16_5.txt  output_100000_16_6.txt  output_100000_16_7.txt  output_100000_16_8.txt  output_100000_16_9.txt  output_100000_32_1.txt  output_100000_32_2.txt  output_100000_4_1.txt  output_100000_4_10.txt  output_100000_4_2.txt  output_100000_4_3.txt  output_100000_4_4.txt  output_100000_4_5.txt  output_100000_4_6.txt  output_100000_4_7.txt  output_100000_4_8.txt  output_100000_4_9.txt  output_100000_64_1.txt  output_100000_64_2.txt  output_100000_8_1.txt  output_100000_8_10.txt  output_100000_8_2.txt  output_100000_8_3.txt  output_100000_8_4.txt  output_100000_8_5.txt  output_100000_8_6.txt  output_100000_8_7.txt  output_100000_8_8.txt  output_100000_8_9.txt  output_10000_16_1.txt  output_10000_16_10.txt  output_10000_16_2.txt  output_10000_16_3.txt  output_10000_16_4.txt  output_10000_16_5.txt  (+114 more)
benchmarks/logs/mpi_omp_128/: output_100000_128_1.txt  output_100000_128_2.txt  output_100000_16_1.txt  output_100000_16_2.txt  output_100000_16_3.txt  output_100000_32_1.txt  output_100000_32_2.txt  output_100000_4_1.txt  output_100000_4_2.txt  output_100000_4_3.txt  output_100000_64_1.txt  output_100000_64_2.txt  output_100000_8_1.txt  output_100000_8_2.txt  output_100000_8_3.txt  output_10000_128_1.txt  output_10000_128_2.txt  output_10000_128_3.txt  output_10000_16_1.txt  output_10000_16_2.txt  output_10000_16_3.txt  output_10000_32_1.txt  output_10000_32_2.txt  output_10000_32_3.txt  output_10000_4_1.txt  output_10000_4_2.txt  output_10000_4_3.txt  output_10000_64_1.txt  output_10000_64_2.txt  output_10000_64_3.txt  output_10000_8_1.txt  output_10000_8_2.txt  output_10000_8_3.txt  output_1000_128_1.txt  output_1000_128_2.txt  output_1000_128_3.txt  output_1000_16_1.txt  output_1000_16_2.txt  output_1000_16_3.txt  output_1000_32_1.txt  (+35 more)
benchmarks/logs/omp/: output_100000_16_1.txt  output_100000_16_10.txt  output_100000_16_2.txt  output_100000_16_3.txt  output_100000_16_4.txt  output_100000_16_5.txt  output_100000_16_6.txt  output_100000_16_7.txt  output_100000_16_8.txt  output_100000_16_9.txt  output_100000_1_1.txt  output_100000_1_10.txt  output_100000_1_2.txt  output_100000_1_3.txt  output_100000_1_4.txt  output_100000_1_5.txt  output_100000_1_6.txt  output_100000_1_7.txt  output_100000_1_8.txt  output_100000_1_9.txt  output_100000_2_1.txt  output_100000_2_10.txt  output_100000_2_2.txt  output_100000_2_3.txt  output_100000_2_4.txt  output_100000_2_5.txt  output_100000_2_6.txt  output_100000_2_7.txt  output_100000_2_8.txt  output_100000_2_9.txt  output_100000_32_1.txt  output_100000_32_10.txt  output_100000_32_2.txt  output_100000_32_3.txt  output_100000_32_4.txt  output_100000_32_5.txt  output_100000_32_6.txt  output_100000_32_7.txt  (+312 more)
includes/: Box.h  Config.h  Particle.h  Quadtree.h  SDLUtils.h  Shader.h  Simulation.h  SimulationMPI.h  SimulationMPISDL.h  SimulationSDL.h  Vector2d.h
ov_orig/: config.json  content.json
ov_orig/binaries/: particleSimulation
ov_orig/logs/: log.txt
scripts/: compile_mpi.sh  compile_mpi_omp.sh  compile_omp.sh  compile_sequential.sh  run_mpi.sh  run_mpi_omp.sh  run_omp.sh
scripts/build_mpi/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  particleSimulationMPI
scripts/build_mpi_omp/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  particleSimulationMPI
scripts/build_omp/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  particleSimulation
src/: Shader.cpp  Simulation.cpp  SimulationMPI.cpp  SimulationMPISDL.cpp  SimulationSDL.cpp  main.cpp  mpi_main.cpp  mpi_sdl_main.cpp  sdl_main.cpp
(+65 files in other folders)
